--- a/src/style.css
+++ b/src/style.css
@@ -105,6 +105,7 @@ dialog form select:focus {
 	background-color: var(--primary-color);
 	color: var(--light-color);
 	padding: 0.5rem;
+	cursor: pointer;
 }
 
 .content {
@@ -149,4 +150,45 @@ dialog form select:focus {
 	bottom: 20px;
 	right: 20px;
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.todo-item {
+	border: 1px solid var(--dark-color);
+	padding: 0.5rem;
+	margin: 0.5rem 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.todo-item input[type="checkbox"] {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+
+	background-color: var(--light-color);
+	border: 2px solid var(--dark-color);
+	border-radius: 8px;
+}
+
+.todo-item input[type="checkbox"]:checked {
+	background-color: var(--primary-color);
+}
+
+.todo-item.completed {
+	text-decoration: line-through;
+	background-color: #e3e3e3;
+}
+
+.todo-lower {
+	display: flex;
+	gap: 0.5rem;
+}
+
+.overdue {
+	color: red;
 }
