--- a/src/style.css
+++ b/src/style.css
@@ -108,6 +108,10 @@ dialog form select:focus {
 	cursor: pointer;
 }
 
+.header:hover {
+	background-color: var(--secondary-color);
+}
+
 .content {
 	display: grid;
 	grid-template-columns: 1fr 3fr;
@@ -152,13 +156,32 @@ dialog form select:focus {
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
+.todos-container {
+	background-color: var(--light-color);
+	color: var(--dark-color);
+	padding: 1rem;
+}
+
 .todo-item {
-	border: 1px solid var(--dark-color);
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 	padding: 0.5rem;
 	margin: 0.5rem 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	border-radius: 8px;
+}
+
+.todo-item:hover {
+	background-color: var(--light-color);
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	padding: 0.6rem;
+}
+
+.todo-item-right {
+	display: flex;
+	gap: 0.5rem;
+	align-items: center;
 }
 
 .todo-item input[type="checkbox"] {
@@ -180,8 +203,12 @@ dialog form select:focus {
 }
 
 .todo-item.completed {
+	border: 1px solid var(--primary-color);
+}
+
+.todo-item.completed h3,
+.todo-item.completed p {
 	text-decoration: line-through;
-	background-color: #e3e3e3;
 }
 
 .todo-lower {
